Removed the RSA-EXPORT ciphersuites.

--- a/configure.ac
+++ b/configure.ac
@@ -655,9 +655,9 @@ if features are disabled)
   PSK support:          $ac_enable_psk
   DHE support:          $ac_enable_dhe
   ECDHE support:        $ac_enable_ecdhe
-  RSA-EXPORT support:   $ac_enable_rsa_export
   Anon auth support:    $ac_enable_anon
   Heartbeat support:    $ac_enable_heartbeat
+  RSA-EXPORT compat:    $ac_enable_rsa_export
 ])
 
 AC_MSG_NOTICE([Optional applications:
