--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -98,7 +98,7 @@ HFILES = abstract_int.h debug.h gnutls_compress.h gnutls_cipher.h	\
 	gnutls_constate.h gnutls_global.h gnutls_sig.h gnutls_mem.h	\
 	gnutls_session_pack.h gnutls_str.h gnutls_str_array.h		\
 	gnutls_state.h gnutls_x509.h crypto-backend.h			\
-	gnutls_rsa_export.h gnutls_srp.h auth/srp.h auth/srp_passwd.h	\
+	gnutls_srp.h auth/srp.h auth/srp_passwd.h	\
 	gnutls_helper.h gnutls_supplemental.h crypto.h random.h system.h\
 	locks.h gnutls_mbuffers.h gnutls_ecc.h pin.h 
 
