--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1045,6 +1045,13 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_srtp_set_mki (gnutls_session_t session, const gnutls_datum_t *mki);
   int gnutls_srtp_get_mki (gnutls_session_t session, gnutls_datum_t *mki);
 
+/* ALPN TLS extension */
+  int gnutls_alpn_get_selected_protocol (gnutls_session_t session,
+                                   gnutls_datum_t * protocol);
+  int gnutls_alpn_set_protocols (gnutls_session_t session,
+                           const gnutls_datum_t * protocols, unsigned protocols_size);
+
+
   int gnutls_key_generate (gnutls_datum_t * key, unsigned int key_size);
 
 /* if you just want some defaults, use the following.
