--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -112,6 +112,7 @@ extern "C"
     GNUTLS_CIPHER_AES_256_GCM = 94,
     GNUTLS_CIPHER_CAMELLIA_192_CBC = 95,
     GNUTLS_CIPHER_SALSA20_256 = 96,
+    GNUTLS_CIPHER_ESTREAM_SALSA20_256 = 97,
 
     /* used only for PGP internals. Ignored in TLS/SSL
      */
