--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -388,6 +388,7 @@ extern "C"
     GNUTLS_A_CERTIFICATE_UNOBTAINABLE = 111,
     GNUTLS_A_UNRECOGNIZED_NAME = 112,
     GNUTLS_A_UNKNOWN_PSK_IDENTITY = 115,
+    GNUTLS_A_NO_APPLICATION_PROTOCOL = 120,
   } gnutls_alert_description_t;
 
 /**
@@ -1047,11 +1048,12 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_srtp_get_mki (gnutls_session_t session, gnutls_datum_t *mki);
 
 /* ALPN TLS extension */
+#define GNUTLS_ALPN_MAND 1
   int gnutls_alpn_get_selected_protocol (gnutls_session_t session,
                                    gnutls_datum_t * protocol);
   int gnutls_alpn_set_protocols (gnutls_session_t session,
-                           const gnutls_datum_t * protocols, unsigned protocols_size);
-
+                           const gnutls_datum_t * protocols, unsigned protocols_size,
+                           unsigned flags);
 
   int gnutls_key_generate (gnutls_datum_t * key, unsigned int key_size);
 
@@ -2199,6 +2201,7 @@ typedef int (*gnutls_pin_callback_t) (void *userdata, int attempt,
 #define GNUTLS_E_OCSP_RESPONSE_ERROR -341
 #define GNUTLS_E_RANDOM_DEVICE_ERROR -342
 #define GNUTLS_E_AUTH_ERROR -343
+#define GNUTLS_E_NO_APPLICATION_PROTOCOL -344
 
 #define GNUTLS_E_UNIMPLEMENTED_FEATURE -1250
 
