--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -541,9 +541,11 @@ ENUMS += enums/gnutls_pkcs11_obj_type_t
 ENUMS += enums/gnutls_pkcs11_token_info_t
 ENUMS += enums/gnutls_pkcs12_bag_type_t
 ENUMS += enums/gnutls_pkcs_encrypt_flags_t
+ENUMS += enums/gnutls_privkey_flags_t
 ENUMS += enums/gnutls_privkey_type_t
 ENUMS += enums/gnutls_protocol_t
 ENUMS += enums/gnutls_psk_key_flags
+ENUMS += enums/gnutls_pubkey_flags_t
 ENUMS += enums/gnutls_rnd_level_t
 ENUMS += enums/gnutls_sec_param_t
 ENUMS += enums/gnutls_server_name_type_t
@@ -696,8 +698,12 @@ FUNCS += functions/gnutls_certificate_set_x509_key
 FUNCS += functions/gnutls_certificate_set_x509_key.short
 FUNCS += functions/gnutls_certificate_set_x509_key_file
 FUNCS += functions/gnutls_certificate_set_x509_key_file.short
+FUNCS += functions/gnutls_certificate_set_x509_key_file2
+FUNCS += functions/gnutls_certificate_set_x509_key_file2.short
 FUNCS += functions/gnutls_certificate_set_x509_key_mem
 FUNCS += functions/gnutls_certificate_set_x509_key_mem.short
+FUNCS += functions/gnutls_certificate_set_x509_key_mem2
+FUNCS += functions/gnutls_certificate_set_x509_key_mem2.short
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_file
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_file.short
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_mem
@@ -1648,6 +1654,8 @@ FUNCS += functions/gnutls_set_default_priority
 FUNCS += functions/gnutls_set_default_priority.short
 FUNCS += functions/gnutls_sign_algorithm_get
 FUNCS += functions/gnutls_sign_algorithm_get.short
+FUNCS += functions/gnutls_sign_algorithm_get_client
+FUNCS += functions/gnutls_sign_algorithm_get_client.short
 FUNCS += functions/gnutls_sign_algorithm_get_requested
 FUNCS += functions/gnutls_sign_algorithm_get_requested.short
 FUNCS += functions/gnutls_sign_callback_get
