--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -145,7 +145,9 @@ APIMANS += gnutls_certificate_set_x509_crl_file.3
 APIMANS += gnutls_certificate_set_x509_crl_mem.3
 APIMANS += gnutls_certificate_set_x509_key.3
 APIMANS += gnutls_certificate_set_x509_key_file.3
+APIMANS += gnutls_certificate_set_x509_key_file2.3
 APIMANS += gnutls_certificate_set_x509_key_mem.3
+APIMANS += gnutls_certificate_set_x509_key_mem2.3
 APIMANS += gnutls_certificate_set_x509_simple_pkcs12_file.3
 APIMANS += gnutls_certificate_set_x509_simple_pkcs12_mem.3
 APIMANS += gnutls_certificate_set_x509_system_trust.3
@@ -621,6 +623,7 @@ APIMANS += gnutls_session_ticket_key_generate.3
 APIMANS += gnutls_set_default_export_priority.3
 APIMANS += gnutls_set_default_priority.3
 APIMANS += gnutls_sign_algorithm_get.3
+APIMANS += gnutls_sign_algorithm_get_client.3
 APIMANS += gnutls_sign_algorithm_get_requested.3
 APIMANS += gnutls_sign_callback_get.3
 APIMANS += gnutls_sign_callback_set.3
