--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -541,9 +541,11 @@ ENUMS += enums/gnutls_pkcs11_obj_type_t
 ENUMS += enums/gnutls_pkcs11_token_info_t
 ENUMS += enums/gnutls_pkcs12_bag_type_t
 ENUMS += enums/gnutls_pkcs_encrypt_flags_t
+ENUMS += enums/gnutls_privkey_flags_t
 ENUMS += enums/gnutls_privkey_type_t
 ENUMS += enums/gnutls_protocol_t
 ENUMS += enums/gnutls_psk_key_flags
+ENUMS += enums/gnutls_pubkey_flags_t
 ENUMS += enums/gnutls_rnd_level_t
 ENUMS += enums/gnutls_sec_param_t
 ENUMS += enums/gnutls_server_name_type_t
@@ -596,6 +598,10 @@ FUNCS += functions/gnutls_alert_send
 FUNCS += functions/gnutls_alert_send.short
 FUNCS += functions/gnutls_alert_send_appropriate
 FUNCS += functions/gnutls_alert_send_appropriate.short
+FUNCS += functions/gnutls_alpn_get_selected_protocol
+FUNCS += functions/gnutls_alpn_get_selected_protocol.short
+FUNCS += functions/gnutls_alpn_set_protocols
+FUNCS += functions/gnutls_alpn_set_protocols.short
 FUNCS += functions/gnutls_anon_allocate_client_credentials
 FUNCS += functions/gnutls_anon_allocate_client_credentials.short
 FUNCS += functions/gnutls_anon_allocate_server_credentials
@@ -696,8 +702,12 @@ FUNCS += functions/gnutls_certificate_set_x509_key
 FUNCS += functions/gnutls_certificate_set_x509_key.short
 FUNCS += functions/gnutls_certificate_set_x509_key_file
 FUNCS += functions/gnutls_certificate_set_x509_key_file.short
+FUNCS += functions/gnutls_certificate_set_x509_key_file2
+FUNCS += functions/gnutls_certificate_set_x509_key_file2.short
 FUNCS += functions/gnutls_certificate_set_x509_key_mem
 FUNCS += functions/gnutls_certificate_set_x509_key_mem.short
+FUNCS += functions/gnutls_certificate_set_x509_key_mem2
+FUNCS += functions/gnutls_certificate_set_x509_key_mem2.short
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_file
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_file.short
 FUNCS += functions/gnutls_certificate_set_x509_simple_pkcs12_mem
@@ -746,6 +756,8 @@ FUNCS += functions/gnutls_cipher_get_block_size
 FUNCS += functions/gnutls_cipher_get_block_size.short
 FUNCS += functions/gnutls_cipher_get_id
 FUNCS += functions/gnutls_cipher_get_id.short
+FUNCS += functions/gnutls_cipher_get_iv_size
+FUNCS += functions/gnutls_cipher_get_iv_size.short
 FUNCS += functions/gnutls_cipher_get_key_size
 FUNCS += functions/gnutls_cipher_get_key_size.short
 FUNCS += functions/gnutls_cipher_get_name
@@ -934,6 +946,8 @@ FUNCS += functions/gnutls_hmac_init
 FUNCS += functions/gnutls_hmac_init.short
 FUNCS += functions/gnutls_hmac_output
 FUNCS += functions/gnutls_hmac_output.short
+FUNCS += functions/gnutls_hmac_set_nonce
+FUNCS += functions/gnutls_hmac_set_nonce.short
 FUNCS += functions/gnutls_init
 FUNCS += functions/gnutls_init.short
 FUNCS += functions/gnutls_key_generate
@@ -958,6 +972,8 @@ FUNCS += functions/gnutls_mac_get_key_size
 FUNCS += functions/gnutls_mac_get_key_size.short
 FUNCS += functions/gnutls_mac_get_name
 FUNCS += functions/gnutls_mac_get_name.short
+FUNCS += functions/gnutls_mac_get_nonce_size
+FUNCS += functions/gnutls_mac_get_nonce_size.short
 FUNCS += functions/gnutls_mac_list
 FUNCS += functions/gnutls_mac_list.short
 FUNCS += functions/gnutls_mac_set_priority
@@ -1418,6 +1434,10 @@ FUNCS += functions/gnutls_privkey_sign_data
 FUNCS += functions/gnutls_privkey_sign_data.short
 FUNCS += functions/gnutls_privkey_sign_hash
 FUNCS += functions/gnutls_privkey_sign_hash.short
+FUNCS += functions/gnutls_privkey_sign_raw_data
+FUNCS += functions/gnutls_privkey_sign_raw_data.short
+FUNCS += functions/gnutls_privkey_status
+FUNCS += functions/gnutls_privkey_status.short
 FUNCS += functions/gnutls_protocol_get_id
 FUNCS += functions/gnutls_protocol_get_id.short
 FUNCS += functions/gnutls_protocol_get_name
@@ -1612,6 +1632,8 @@ FUNCS += functions/gnutls_session_get_data
 FUNCS += functions/gnutls_session_get_data.short
 FUNCS += functions/gnutls_session_get_data2
 FUNCS += functions/gnutls_session_get_data2.short
+FUNCS += functions/gnutls_session_get_desc
+FUNCS += functions/gnutls_session_get_desc.short
 FUNCS += functions/gnutls_session_get_id
 FUNCS += functions/gnutls_session_get_id.short
 FUNCS += functions/gnutls_session_get_id2
@@ -1642,6 +1664,8 @@ FUNCS += functions/gnutls_set_default_priority
 FUNCS += functions/gnutls_set_default_priority.short
 FUNCS += functions/gnutls_sign_algorithm_get
 FUNCS += functions/gnutls_sign_algorithm_get.short
+FUNCS += functions/gnutls_sign_algorithm_get_client
+FUNCS += functions/gnutls_sign_algorithm_get_client.short
 FUNCS += functions/gnutls_sign_algorithm_get_requested
 FUNCS += functions/gnutls_sign_algorithm_get_requested.short
 FUNCS += functions/gnutls_sign_callback_get
@@ -1794,6 +1818,8 @@ FUNCS += functions/gnutls_x509_crl_get_extension_oid
 FUNCS += functions/gnutls_x509_crl_get_extension_oid.short
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn.short
+FUNCS += functions/gnutls_x509_crl_get_issuer_dn2
+FUNCS += functions/gnutls_x509_crl_get_issuer_dn2.short
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn_by_oid
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crl_get_next_update
@@ -1860,6 +1886,8 @@ FUNCS += functions/gnutls_x509_crq_get_challenge_password
 FUNCS += functions/gnutls_x509_crq_get_challenge_password.short
 FUNCS += functions/gnutls_x509_crq_get_dn
 FUNCS += functions/gnutls_x509_crq_get_dn.short
+FUNCS += functions/gnutls_x509_crq_get_dn2
+FUNCS += functions/gnutls_x509_crq_get_dn2.short
 FUNCS += functions/gnutls_x509_crq_get_dn_by_oid
 FUNCS += functions/gnutls_x509_crq_get_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crq_get_dn_oid
@@ -1958,6 +1986,8 @@ FUNCS += functions/gnutls_x509_crt_get_crl_dist_points
 FUNCS += functions/gnutls_x509_crt_get_crl_dist_points.short
 FUNCS += functions/gnutls_x509_crt_get_dn
 FUNCS += functions/gnutls_x509_crt_get_dn.short
+FUNCS += functions/gnutls_x509_crt_get_dn2
+FUNCS += functions/gnutls_x509_crt_get_dn2.short
 FUNCS += functions/gnutls_x509_crt_get_dn_by_oid
 FUNCS += functions/gnutls_x509_crt_get_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crt_get_dn_oid
@@ -1984,6 +2014,8 @@ FUNCS += functions/gnutls_x509_crt_get_issuer_alt_othername_oid
 FUNCS += functions/gnutls_x509_crt_get_issuer_alt_othername_oid.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn.short
+FUNCS += functions/gnutls_x509_crt_get_issuer_dn2
+FUNCS += functions/gnutls_x509_crt_get_issuer_dn2.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_by_oid
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_oid
@@ -2222,6 +2254,12 @@ FUNCS += functions/gnutls_x509_trust_list_get_issuer
 FUNCS += functions/gnutls_x509_trust_list_get_issuer.short
 FUNCS += functions/gnutls_x509_trust_list_init
 FUNCS += functions/gnutls_x509_trust_list_init.short
+FUNCS += functions/gnutls_x509_trust_list_remove_cas
+FUNCS += functions/gnutls_x509_trust_list_remove_cas.short
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_file
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_file.short
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_mem
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_mem.short
 FUNCS += functions/gnutls_x509_trust_list_verify_crt
 FUNCS += functions/gnutls_x509_trust_list_verify_crt.short
 FUNCS += functions/gnutls_x509_trust_list_verify_named_crt
