--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -95,6 +95,8 @@ APIMANS += gnutls_alert_get_name.3
 APIMANS += gnutls_alert_get_strname.3
 APIMANS += gnutls_alert_send.3
 APIMANS += gnutls_alert_send_appropriate.3
+APIMANS += gnutls_alpn_get_selected_protocol.3
+APIMANS += gnutls_alpn_set_protocols.3
 APIMANS += gnutls_anon_allocate_client_credentials.3
 APIMANS += gnutls_anon_allocate_server_credentials.3
 APIMANS += gnutls_anon_free_client_credentials.3
@@ -145,7 +147,9 @@ APIMANS += gnutls_certificate_set_x509_crl_file.3
 APIMANS += gnutls_certificate_set_x509_crl_mem.3
 APIMANS += gnutls_certificate_set_x509_key.3
 APIMANS += gnutls_certificate_set_x509_key_file.3
+APIMANS += gnutls_certificate_set_x509_key_file2.3
 APIMANS += gnutls_certificate_set_x509_key_mem.3
+APIMANS += gnutls_certificate_set_x509_key_mem2.3
 APIMANS += gnutls_certificate_set_x509_simple_pkcs12_file.3
 APIMANS += gnutls_certificate_set_x509_simple_pkcs12_mem.3
 APIMANS += gnutls_certificate_set_x509_system_trust.3
@@ -170,6 +174,7 @@ APIMANS += gnutls_cipher_encrypt2.3
 APIMANS += gnutls_cipher_get.3
 APIMANS += gnutls_cipher_get_block_size.3
 APIMANS += gnutls_cipher_get_id.3
+APIMANS += gnutls_cipher_get_iv_size.3
 APIMANS += gnutls_cipher_get_key_size.3
 APIMANS += gnutls_cipher_get_name.3
 APIMANS += gnutls_cipher_init.3
@@ -264,6 +269,7 @@ APIMANS += gnutls_hmac_fast.3
 APIMANS += gnutls_hmac_get_len.3
 APIMANS += gnutls_hmac_init.3
 APIMANS += gnutls_hmac_output.3
+APIMANS += gnutls_hmac_set_nonce.3
 APIMANS += gnutls_init.3
 APIMANS += gnutls_key_generate.3
 APIMANS += gnutls_kx_get.3
@@ -276,6 +282,7 @@ APIMANS += gnutls_mac_get.3
 APIMANS += gnutls_mac_get_id.3
 APIMANS += gnutls_mac_get_key_size.3
 APIMANS += gnutls_mac_get_name.3
+APIMANS += gnutls_mac_get_nonce_size.3
 APIMANS += gnutls_mac_list.3
 APIMANS += gnutls_mac_set_priority.3
 APIMANS += gnutls_ocsp_req_add_cert.3
@@ -506,6 +513,8 @@ APIMANS += gnutls_privkey_init.3
 APIMANS += gnutls_privkey_set_pin_function.3
 APIMANS += gnutls_privkey_sign_data.3
 APIMANS += gnutls_privkey_sign_hash.3
+APIMANS += gnutls_privkey_sign_raw_data.3
+APIMANS += gnutls_privkey_status.3
 APIMANS += gnutls_protocol_get_id.3
 APIMANS += gnutls_protocol_get_name.3
 APIMANS += gnutls_protocol_get_version.3
@@ -603,6 +612,7 @@ APIMANS += gnutls_session_enable_compatibility_mode.3
 APIMANS += gnutls_session_force_valid.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
+APIMANS += gnutls_session_get_desc.3
 APIMANS += gnutls_session_get_id.3
 APIMANS += gnutls_session_get_id2.3
 APIMANS += gnutls_session_get_ptr.3
@@ -618,6 +628,7 @@ APIMANS += gnutls_session_ticket_key_generate.3
 APIMANS += gnutls_set_default_export_priority.3
 APIMANS += gnutls_set_default_priority.3
 APIMANS += gnutls_sign_algorithm_get.3
+APIMANS += gnutls_sign_algorithm_get_client.3
 APIMANS += gnutls_sign_algorithm_get_requested.3
 APIMANS += gnutls_sign_callback_get.3
 APIMANS += gnutls_sign_callback_set.3
@@ -694,6 +705,7 @@ APIMANS += gnutls_x509_crl_get_extension_data.3
 APIMANS += gnutls_x509_crl_get_extension_info.3
 APIMANS += gnutls_x509_crl_get_extension_oid.3
 APIMANS += gnutls_x509_crl_get_issuer_dn.3
+APIMANS += gnutls_x509_crl_get_issuer_dn2.3
 APIMANS += gnutls_x509_crl_get_issuer_dn_by_oid.3
 APIMANS += gnutls_x509_crl_get_next_update.3
 APIMANS += gnutls_x509_crl_get_number.3
@@ -727,6 +739,7 @@ APIMANS += gnutls_x509_crq_get_attribute_info.3
 APIMANS += gnutls_x509_crq_get_basic_constraints.3
 APIMANS += gnutls_x509_crq_get_challenge_password.3
 APIMANS += gnutls_x509_crq_get_dn.3
+APIMANS += gnutls_x509_crq_get_dn2.3
 APIMANS += gnutls_x509_crq_get_dn_by_oid.3
 APIMANS += gnutls_x509_crq_get_dn_oid.3
 APIMANS += gnutls_x509_crq_get_extension_by_oid.3
@@ -776,6 +789,7 @@ APIMANS += gnutls_x509_crt_get_basic_constraints.3
 APIMANS += gnutls_x509_crt_get_ca_status.3
 APIMANS += gnutls_x509_crt_get_crl_dist_points.3
 APIMANS += gnutls_x509_crt_get_dn.3
+APIMANS += gnutls_x509_crt_get_dn2.3
 APIMANS += gnutls_x509_crt_get_dn_by_oid.3
 APIMANS += gnutls_x509_crt_get_dn_oid.3
 APIMANS += gnutls_x509_crt_get_expiration_time.3
@@ -789,6 +803,7 @@ APIMANS += gnutls_x509_crt_get_issuer_alt_name.3
 APIMANS += gnutls_x509_crt_get_issuer_alt_name2.3
 APIMANS += gnutls_x509_crt_get_issuer_alt_othername_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_dn.3
+APIMANS += gnutls_x509_crt_get_issuer_dn2.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_by_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_unique_id.3
@@ -908,6 +923,9 @@ APIMANS += gnutls_x509_trust_list_add_trust_mem.3
 APIMANS += gnutls_x509_trust_list_deinit.3
 APIMANS += gnutls_x509_trust_list_get_issuer.3
 APIMANS += gnutls_x509_trust_list_init.3
+APIMANS += gnutls_x509_trust_list_remove_cas.3
+APIMANS += gnutls_x509_trust_list_remove_trust_file.3
+APIMANS += gnutls_x509_trust_list_remove_trust_mem.3
 APIMANS += gnutls_x509_trust_list_verify_crt.3
 APIMANS += gnutls_x509_trust_list_verify_named_crt.3
 
