--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -66,7 +66,7 @@ ctests = mini-deflate simple gc set_pkcs12_cred certder certuniqueid	\
 	 crq_apis init_roundtrip pkcs12_s2k_pem dn2 mini-eagain		\
 	 nul-in-x509-names x509_altname pkcs12_encode mini-x509		\
 	 mini-rehandshake rng-fork mini-eagain-dtls resume-dtls \
-	 x509cert x509cert-tl infoaccess  \
+	 x509cert x509cert-tl infoaccess mini-dtls-hello-verify \
 	 mini-tdb mini-dtls-rehandshake mini-alpn \
 	 mini-termination mini-x509-cas mini-x509-2 pkcs12_simple \
 	 mini-emsgsize-dtls chainverify-unsorted \
