--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1648,6 +1648,8 @@ FUNCS += functions/gnutls_session_resumption_requested
 FUNCS += functions/gnutls_session_resumption_requested.short
 FUNCS += functions/gnutls_session_set_data
 FUNCS += functions/gnutls_session_set_data.short
+FUNCS += functions/gnutls_session_set_id
+FUNCS += functions/gnutls_session_set_id.short
 FUNCS += functions/gnutls_session_set_premaster
 FUNCS += functions/gnutls_session_set_premaster.short
 FUNCS += functions/gnutls_session_set_ptr
