--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -620,6 +620,7 @@ APIMANS += gnutls_session_get_random.3
 APIMANS += gnutls_session_is_resumed.3
 APIMANS += gnutls_session_resumption_requested.3
 APIMANS += gnutls_session_set_data.3
+APIMANS += gnutls_session_set_id.3
 APIMANS += gnutls_session_set_premaster.3
 APIMANS += gnutls_session_set_ptr.3
 APIMANS += gnutls_session_ticket_enable_client.3
