avoid running tests which require datefudge in windows

--- a/tests/pkcs1-padding/Makefile.am
+++ b/tests/pkcs1-padding/Makefile.am
@@ -26,6 +26,8 @@ EXTRA_DIST = pkcs1-pad-ok.pem pkcs1-pad-broken.pem \
 
 dist_check_SCRIPTS = pkcs1-pad
 
+if !WINDOWS
 TESTS = pkcs1-pad
+endif
 
 TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT)
