--- a/tests/cert-tests/Makefile.am
+++ b/tests/cert-tests/Makefile.am
@@ -27,7 +27,11 @@ EXTRA_DIST = ca-no-pathlen.pem no-ca-or-pathlen.pem aki-cert.pem \
 
 dist_check_SCRIPTS = pathlen aki template-test pem-decoding dane
 
-TESTS = pathlen aki template-test pem-decoding
+TESTS = pathlen aki pem-decoding
+
+if !WINDOWS
+TESTS += template-test
+endif
 
 if ENABLE_DANE
 TESTS += dane
