--- a/lib/opencdk/Makefile.am
+++ b/lib/opencdk/Makefile.am
@@ -18,6 +18,8 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>
 
+AM_CFLAGS = $(NETTLE_CFLAGS)
+
 AM_CPPFLAGS = \
 	-I$(srcdir)/../../gl		\
 	-I$(builddir)/../../gl		\
