--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -929,6 +929,14 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   ssize_t gnutls_record_recv_seq (gnutls_session_t session, void *data, size_t data_size,
     unsigned char *seq);
 
+  size_t gnutls_record_overhead_size (gnutls_session_t session);
+
+  size_t gnutls_record_overhead_size2 (gnutls_protocol_t version, 
+                                      gnutls_cipher_algorithm_t cipher,
+                                      gnutls_mac_algorithm_t mac, 
+                                      gnutls_compression_method_t comp, 
+                                      unsigned int flags);
+
   void gnutls_session_enable_compatibility_mode (gnutls_session_t session);
   void gnutls_record_set_max_empty_records (gnutls_session_t session, const unsigned int i);
 
