--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -300,6 +300,7 @@ extern "C"
    * @GNUTLS_DATAGRAM: Connection is datagram oriented (DTLS).
    * @GNUTLS_NONBLOCK: Connection should not block (DTLS).
    * @GNUTLS_NO_EXTENSIONS: Do not enable any TLS extensions by default.
+   * @GNUTLS_NO_REPLAY_PROTECTION: Disable any replay protection in DTLS.
    *
    */
 #define GNUTLS_SERVER 1
@@ -307,6 +308,7 @@ extern "C"
 #define GNUTLS_DATAGRAM (1<<2)
 #define GNUTLS_NONBLOCK (1<<3)
 #define GNUTLS_NO_EXTENSIONS (1<<4)
+#define GNUTLS_NO_REPLAY_PROTECTION (1<<5)
 
 /**
  * gnutls_alert_level_t:
