ported patch for RSA-PSK
revives some deletions from
a8504e254f6ff23200c6069961ab367c9cec43a0

original patch can be found in
e3c245b951530a92fc610a130faf167a37461073
f06ba1b71fa2cf9e1f3e33ea58cda94aaff88f20

--- a/lib/auth/Makefile.am
+++ b/lib/auth/Makefile.am
@@ -35,7 +35,7 @@ endif
 noinst_LTLIBRARIES = libgnutls_auth.la
 
 libgnutls_auth_la_SOURCES = anon.c cert.c dh_common.c dhe.c \
-	dhe_psk.c psk.c psk_passwd.c rsa.c srp.c \
+	rsa_psk.c dhe_psk.c psk.c psk_passwd.c rsa.c srp.c \
 	srp_passwd.c srp_rsa.c srp_sb64.c anon.h cert.h dh_common.h \
 	psk.h psk_passwd.h srp.h srp_passwd.h anon_ecdh.c \
 	ecdhe.c ecdhe.h
