--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -134,6 +134,7 @@ extern "C"
    * @GNUTLS_KX_SRP_DSS: SRP-DSS key-exchange algorithm.
    * @GNUTLS_KX_PSK: PSK key-exchange algorithm.
    * @GNUTLS_KX_DHE_PSK: DHE-PSK key-exchange algorithm.
+   * @GNUTLS_KX_RSA_PSK: RSA-PSK key-exchange algorithm.
    *
    * Enumeration of different key exchange algorithms.
    */
@@ -149,7 +150,8 @@ extern "C"
     GNUTLS_KX_SRP_RSA = 7,
     GNUTLS_KX_SRP_DSS = 8,
     GNUTLS_KX_PSK = 9,
-    GNUTLS_KX_DHE_PSK = 10
+    GNUTLS_KX_DHE_PSK = 10,
+    GNUTLS_KX_RSA_PSK = 11
   } gnutls_kx_algorithm_t;
 
   /**
