--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -60,7 +60,7 @@ libutils_la_SOURCES = utils.h utils.c
 libutils_la_LIBADD = ../gl/libgnu.la
 
 ctests = mini-deflate simple gc set_pkcs12_cred certder certuniqueid	\
-	 mpi certificate_set_x509_crl dn parse_ca moredn mini		\
+	 mpi certificate_set_x509_crl dn parse_ca moredn record-sizes \
 	 hostname-check cve-2008-4989 pkcs12_s2k chainverify		\
 	 crq_key_id x509sign-verify cve-2009-1415 cve-2009-1416		\
 	 crq_apis init_roundtrip pkcs12_s2k_pem dn2 mini-eagain		\
