fix version numbers and avoid rebuild of documentation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,3 +49,5 @@ dist-hook:
 		rm -f $$i.tmp; \
 		mv -f *.1 ../doc/manpages/; \
 	done
+	sed 's/\@\@VERSION\@\@/$(VERSION)/g' -i $(distdir)/doc/invoke-*.texi
+	touch $(distdir)/doc/*.html $(distdir)/doc/*.pdf $(distdir)/doc/*.info
